--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port = 9000 
-spring.datasource.username=root
-spring.datasource.password=
+server.port=${APP_PORT}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/db_course?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DB_URL}
+spring.datasource.driver-class-name=${DB_DRIVER_CN}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.devtools.restart.enabled=true
@@ -14,11 +14,11 @@ spring.devtools.restart.enabled=true
 
 
 # Java Mail Sender
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username= sibkmjava@gmail.com
-spring.mail.password= oweaieuvkstmdppz
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.trust=${MAIL_SSL}
